# openEff

./: .gitignore  BUILDING.md  BUILD_FIX.md  CMakeLists.txt  PEDALBOARD_PLAN.md  QUICKSTART.md  README.md  RELEASE_SETUP.md  VERSION_INFO.md  increment_version.cmake  release.bat  release.sh
.github/: copilot-instructions.md
.github/workflows/: build-release.yml  build.yml
src/: CompressorEditor.cpp  CompressorEditor.h  CompressorProcessor.cpp  CompressorProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ReverbEditor.cpp  ReverbEditor.h  ReverbProcessor.cpp  ReverbProcessor.h
src/dsp/: Filter.cpp  Filter.h
src/effects/: BigMuff.cpp  BigMuff.h  Chorus.cpp  Chorus.h  Compressor.cpp  Compressor.h  EffectBase.cpp  EffectBase.h  Fuzz.cpp  Fuzz.h  Orange.cpp  Orange.h  Reverb.cpp  Reverb.h  Tuner.cpp  Tuner.h
src/pedalboard/: EffectChain.cpp  EffectChain.h  EffectFactory.cpp  EffectFactory.h  PedalBoardEditor.cpp  PedalBoardEditor.h  PedalBoardProcessor.cpp  PedalBoardProcessor.h
src/pedalboard/ui/: PedalComponent.cpp  PedalComponent.h  PedalLookAndFeel.cpp  PedalLookAndFeel.h
